--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.47.0",
     "react-markdown": "^9.0.0",
+    "replicate": "^0.20.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
