--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.23.5",
     "@hookform/resolvers": "^3.3.1",
+    "@prisma/client": "^5.4.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
@@ -29,6 +30,7 @@
     "next": "13.4.19",
     "openai": "^3.3.0",
     "postcss": "8.4.29",
+    "prisma": "^5.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.47.0",
