--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
-    "zod": "^3.22.3"
+    "zod": "^3.22.3",
+    "zustand": "^4.4.3"
   }
 }
