--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-hot-toast": "^2.4.1",
     "react-markdown": "^9.0.0",
     "replicate": "^0.20.0",
     "stripe": "^13.10.0",
